--- a/old-xcode9+/ViewController/VC/VC/SplitViewController/SplitViewController.storyboard
+++ b/old-xcode9+/ViewController/VC/VC/SplitViewController/SplitViewController.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wl9-0Y-FPf">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wl9-0Y-FPf">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,10 +17,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="q2B-Qj-tLL">
-                                <rect key="frame" x="41" y="250.5" width="293" height="166"/>
+                                <rect key="frame" x="41.5" y="250.5" width="292.5" height="166"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zac-Y0-gpN">
-                                        <rect key="frame" x="0.0" y="0.0" width="293" height="86"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="292.5" height="86"/>
                                         <string key="text">Present Split View Controller
 
 using</string>
@@ -31,32 +29,35 @@ using</string>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="UzG-7R-m91">
-                                        <rect key="frame" x="0.0" y="106" width="293" height="60"/>
+                                        <rect key="frame" x="0.0" y="106" width="292.5" height="60"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D6J-qi-xfD">
-                                                <rect key="frame" x="0.0" y="0.0" width="136.5" height="60"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D6J-qi-xfD">
+                                                <rect key="frame" x="0.0" y="0.0" width="136" height="60"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                                 <state key="normal" title="Code"/>
                                                 <connections>
                                                     <action selector="presentSplitViewController:" destination="wl9-0Y-FPf" eventType="touchUpInside" id="xMe-Hq-9UO"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="07o-RI-zmw">
-                                                <rect key="frame" x="156.5" y="0.0" width="136.5" height="60"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="07o-RI-zmw">
+                                                <rect key="frame" x="156" y="0.0" width="136.5" height="60"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                                 <state key="normal" title="Segue"/>
+                                                <connections>
+                                                    <segue destination="FL1-EY-0rk" kind="presentation" modalPresentationStyle="fullScreen" id="wks-u7-cmP"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                             </stackView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="Ygo-Wu-ehT"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="q2B-Qj-tLL" firstAttribute="centerY" secondItem="itq-Ac-y4q" secondAttribute="centerY" id="G6w-ts-N3c"/>
                             <constraint firstItem="q2B-Qj-tLL" firstAttribute="centerX" secondItem="itq-Ac-y4q" secondAttribute="centerX" id="sSq-4R-i3T"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Ygo-Wu-ehT"/>
                     </view>
                     <navigationItem key="navigationItem" title="Split View Controller" id="qG8-gz-E9T"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
@@ -64,6 +65,35 @@ using</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jpk-PS-aH0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-102" y="159"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="MdK-3V-sPS">
+            <objects>
+                <navigationController id="vWd-aX-qYf" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XaW-lf-VZz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="tQV-XP-OGO" kind="relationship" relationship="rootViewController" id="ApP-Oz-EvE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9k6-oW-gbR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1584" y="-123"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="DCc-aq-5oe">
+            <objects>
+                <splitViewController allowDoubleColumnStyle="YES" id="FL1-EY-0rk" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="vWd-aX-qYf" kind="relationship" relationship="masterViewController" id="oMx-cz-zEm"/>
+                        <segue destination="jEy-P5-lGl" kind="relationship" relationship="detailViewController" id="JbS-Pz-hho"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KQl-dc-Z5w" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="665" y="182"/>
         </scene>
         <!--Color Detail View Controller-->
         <scene sceneID="yDL-tw-dTx">
@@ -74,10 +104,10 @@ using</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dwt-vq-efR">
-                                <rect key="frame" x="16" y="35" width="343" height="612"/>
+                                <rect key="frame" x="16" y="59" width="343" height="588"/>
                                 <subviews>
                                     <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ax-4c-jYY">
-                                        <rect key="frame" x="0.0" y="532" width="343" height="80"/>
+                                        <rect key="frame" x="0.0" y="508" width="343" height="80"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="zvh-1E-YvI">
                                             <rect key="frame" x="0.0" y="0.0" width="343" height="80"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -110,6 +140,7 @@ using</string>
                                 </constraints>
                             </view>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="fG1-Qf-TKc"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="fG1-Qf-TKc" firstAttribute="trailing" secondItem="dwt-vq-efR" secondAttribute="trailing" constant="16" id="Bd0-fT-rwp"/>
@@ -117,7 +148,6 @@ using</string>
                             <constraint firstItem="dwt-vq-efR" firstAttribute="top" secondItem="fG1-Qf-TKc" secondAttribute="top" constant="15" id="fmN-Hq-gCB"/>
                             <constraint firstItem="dwt-vq-efR" firstAttribute="leading" secondItem="fG1-Qf-TKc" secondAttribute="leading" constant="16" id="znR-id-GLc"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="fG1-Qf-TKc"/>
                     </view>
                     <navigationItem key="navigationItem" id="fn9-mL-PRv"/>
                     <connections>
@@ -127,7 +157,7 @@ using</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9FH-bd-h7L" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3385" y="855"/>
+            <point key="canvasLocation" x="1583" y="597"/>
         </scene>
         <!--Material Colors-->
         <scene sceneID="GBH-xZ-fzW">
@@ -139,10 +169,10 @@ using</string>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" textLabel="tz9-t9-djc" style="IBUITableViewCellStyleDefault" id="WaU-yH-CKD">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WaU-yH-CKD" id="WVX-j0-vQd">
-                                    <rect key="frame" x="0.0" y="0.0" width="341" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="348" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tz9-t9-djc">
@@ -154,6 +184,9 @@ using</string>
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="jEy-P5-lGl" kind="showDetail" id="PP7-Xv-bC9"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -172,7 +205,10 @@ using</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fyV-4j-qC2" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="hb1-EC-E9V" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3385" y="71"/>
+            <point key="canvasLocation" x="2462" y="-124"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="PP7-Xv-bC9"/>
+    </inferredMetricsTieBreakers>
 </document>
