--- a/old-xcode9+/AnimationTransition/Transition/Transition/Customizing/CustomTransition/CustomTransition.storyboard
+++ b/old-xcode9+/AnimationTransition/Transition/Transition/Customizing/CustomTransition/CustomTransition.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SYR-u0-TBo">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SYR-u0-TBo">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,11 +13,11 @@
             <objects>
                 <viewController id="SYR-u0-TBo" customClass="CustomTransitionViewController" customModule="Transition" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="55T-h4-3FI">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="MMo-ht-QLF">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="mLb-mc-4mq">
                                     <size key="itemSize" width="235" height="227"/>
@@ -29,7 +27,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="9Zp-OX-0vs">
-                                        <rect key="frame" x="70" y="0.0" width="235" height="227"/>
+                                        <rect key="frame" x="89.5" y="0.0" width="235" height="227"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="235" height="227"/>
@@ -47,7 +45,7 @@
                                             <constraint firstItem="Oql-xM-pNd" firstAttribute="top" secondItem="9Zp-OX-0vs" secondAttribute="top" id="iPh-kz-vCS"/>
                                         </constraints>
                                         <connections>
-                                            <segue destination="hnB-In-64Y" kind="presentation" identifier="mm" id="iaD-te-bPO"/>
+                                            <segue destination="hnB-In-64Y" kind="presentation" identifier="mm" modalPresentationStyle="fullScreen" id="iaD-te-bPO"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -57,6 +55,7 @@
                                 </connections>
                             </collectionView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="hRk-8m-2yj"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="MMo-ht-QLF" firstAttribute="leading" secondItem="hRk-8m-2yj" secondAttribute="leading" id="U6N-T6-waW"/>
@@ -64,7 +63,6 @@
                             <constraint firstItem="MMo-ht-QLF" firstAttribute="trailing" secondItem="hRk-8m-2yj" secondAttribute="trailing" id="dJl-D7-d99"/>
                             <constraint firstItem="MMo-ht-QLF" firstAttribute="bottom" secondItem="hRk-8m-2yj" secondAttribute="bottom" id="pWQ-n3-Ymd"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="hRk-8m-2yj"/>
                     </view>
                     <navigationItem key="navigationItem" title="Custom Transition" id="yWr-vx-GmW"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
@@ -81,30 +79,30 @@
             <objects>
                 <viewController id="hnB-In-64Y" customClass="ImageViewController" customModule="Transition" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="51u-dz-Wsj">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8ao-0Z-P5F">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nHw-vw-3yR">
-                                <rect key="frame" x="155" y="60" width="64" height="64"/>
+                                <rect key="frame" x="175" y="84" width="64" height="64"/>
                                 <state key="normal" image="close"/>
                                 <connections>
                                     <action selector="dismiss:" destination="hnB-In-64Y" eventType="touchUpInside" id="4gc-kw-zyb"/>
                                 </connections>
                             </button>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="rd2-gF-wHD"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="8ao-0Z-P5F" firstAttribute="leading" secondItem="rd2-gF-wHD" secondAttribute="leading" id="3ae-2h-sTs"/>
                             <constraint firstItem="8ao-0Z-P5F" firstAttribute="trailing" secondItem="rd2-gF-wHD" secondAttribute="trailing" id="CMu-Og-DTx"/>
-                            <constraint firstItem="8ao-0Z-P5F" firstAttribute="bottom" secondItem="rd2-gF-wHD" secondAttribute="bottom" id="Lsv-qW-UNQ"/>
+                            <constraint firstItem="8ao-0Z-P5F" firstAttribute="bottom" secondItem="51u-dz-Wsj" secondAttribute="bottom" id="Lsv-qW-UNQ"/>
                             <constraint firstItem="nHw-vw-3yR" firstAttribute="top" secondItem="rd2-gF-wHD" secondAttribute="top" constant="40" id="O66-5f-n2V"/>
                             <constraint firstItem="8ao-0Z-P5F" firstAttribute="top" secondItem="51u-dz-Wsj" secondAttribute="top" id="igV-d8-M3D"/>
                             <constraint firstItem="nHw-vw-3yR" firstAttribute="centerX" secondItem="51u-dz-Wsj" secondAttribute="centerX" id="kK8-PC-Zfs"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="rd2-gF-wHD"/>
                     </view>
                     <connections>
                         <outlet property="imageView" destination="8ao-0Z-P5F" id="3Tm-cz-Waa"/>
